# linux-logging-daemon

./: .gitmodules  CMakeLists.txt  ReadMe.md  createModule.sh  run.sh
Client/: CMakeLists.txt  client.cpp
Utils/: CMakeLists.txt
Utils/main/: CMakeLists.txt
Utils/main/ArgumentParser/: ArgumentParser.hpp
Utils/main/DataStorage/: DataStorage.hpp
Utils/main/Logging/: LoggingProcessor.hpp
Utils/main/ObserverPattern/: Observer.hpp  Subject.hpp
Utils/main/StringUtils/: StringUtils.cpp
Utils/tests/: CMakeLists.txt
Utils/tests/ArgumentParserTest/: ArgumentParserTest.cpp
loggingDaemon/: CMakeLists.txt  loggingDaemon.service
loggingDaemon/main/: CMakeLists.txt  main.cpp
loggingDaemon/main/ClientConnector/: ClientConnector.hpp
loggingDaemon/main/LogFileHandler/: LogFileHandler.cpp  LogFileHandler.hpp
loggingDaemon/main/LogMessage/: LogMessage.cpp  LogMessage.hpp  LogMessageParser.cpp  LogMessageParser.hpp
loggingDaemon/main/LogMessageCollector/: LogMessageCollector.cpp  LogMessageCollector.hpp  LogMessageCollectorThread.cpp  LogMessageCollectorThread.hpp
loggingDaemon/main/LogMessageSorter/: LogMessageObject.cpp  LogMessageParser.hpp
loggingDaemon/main/LoggingClientInterface/: LogMessageProvider.hpp  LoggingClientInterface.cpp  LoggingClientInterface.hpp
loggingDaemon/main/LoggingClientInterface/DomainSocket/: DomainSocketClientInterface.cpp  DomainSocketClientInterface.hpp
loggingDaemon/main/LoggingClientInterface/DomainSocket/ClientConnector/: ClientConnector.cpp  ClientConnector.hpp  ClientConnectorThread.cpp  ClientConnectorThread.hpp
loggingDaemon/main/LoggingClientInterface/DomainSocket/InitialConnection/: InitialConnection.cpp  InitialConnection.hpp  ServerException.hpp
loggingDaemon/main/LoggingClientInterface/GRPC/: GrpcClientInterface.cpp  GrpcClientInterface.hpp
loggingDaemon/main/LoggingClientInterface/GRPC/LogMessageTransporterServiceImpl/: LogMessageTransporterServiceImpl.cpp  LogMessageTransporterServiceImpl.hpp
loggingDaemon/main/LoggingClientInterface/GRPC/LogMessageTransporterServiceImpl/protoBuf/: LogMessageTransporter.grpc.pb.cc  LogMessageTransporter.grpc.pb.h  LogMessageTransporter.pb.cc  LogMessageTransporter.pb.h  LogMessageTransporter.proto
loggingDaemon/main/LoggingMessage/: LogMessageParser.cpp
loggingDaemon/main/ServerConnector/: ServerConnectorThreadManager.cpp  ServerException.hpp
loggingDaemon/main/Utils/DataStorage/: DataStorage.cpp  DataStorage.hpp
loggingDaemon/main/Utils/DirectoryUtils/: DirectoryUtils.cpp  DirectoryUtils.hpp
loggingDaemon/main/Utils/Logging/: LoggingProcessor.cpp  LoggingProcessor.hpp
loggingDaemon/src/: main.cpp
loggingDaemon/src/ClientConnector/: ClientConnector.cpp  ClientConnector.hpp  ClientConnectorThread.cpp  ClientConnectorThread.hpp  LogMessageStorage.cpp  LogMessageStorage.hpp
loggingDaemon/src/LogFileHandler/: LogFileHandler.cpp  LogFileHandler.hpp
loggingDaemon/src/LogMessageCollector/: LogMessageCollector.cpp  LogMessageCollector.hpp  LogMessageCollectorThread.cpp  LogMessageCollectorThread.hpp
loggingDaemon/src/LogMessageSorter/: CMakeLists.txt  LogMessageObject.hpp  LogMessageParser.hpp  LogMessageSorter.cpp  LogMessageSorter.hpp
loggingDaemon/src/ObserverPattern/: Observer.hpp
loggingDaemon/src/ServerConnector/: ServerConnector.cpp  ServerConnector.hpp  ServerConnectorThreadManager.hpp
loggingDaemon/src/StringUtils/: StringUtils.hpp
loggingDaemon/src/Utils/DirectoryUtils/: DirectoryUtils.cpp  DirectoryUtils.hpp
loggingDaemon/src/Utils/Logging/: Logger.hpp  LoggingProcessor.cpp
loggingDaemon/src/Utils/ObserverPattern/: Subject.hpp
loggingDaemon/tests/: CMakeLists.txt
loggingDaemon/tests/Utils/DataStorageTest/: DataStorageTest.cpp
loggingDaemon/tests/src/Utils/DirectorUtilsTest/: DirectoryUtilsTest.cpp
loggingInterfaceLib/: CMakeLists.txt
loggingInterfaceLib/main/: CMakeLists.txt  LogMessageTransporterClientImplementation.cpp  LogMessageTransporterClientImplementation.h  LogMessageTransporterServiceImpl.cpp  LogMessageTransporterServiceImpl.hpp
loggingInterfaceLib/main/grpc/: FindGRPC.cmake  FindProtobuf.cmake
loggingInterfaceLib/main/protoBuf/: LogMessageTransporter.grpc.pb.cc  LogMessageTransporter.grpc.pb.h  LogMessageTransporter.pb.cc  LogMessageTransporter.pb.h  LogMessageTransporter.proto
loggingInterfaceLib/tests/: CMakeLists.txt
loggingLib/: CMakeLists.txt
loggingLib/main/: CMakeLists.txt  Logger.cpp  Logger.h  LoggingServerConnector.cpp  LoggingServerConnector.hpp
loggingLib/main/LoggingTransporter/: DomainSocketTransporter.cpp  DomainSocketTransporter.hpp  GrpcTransporter.cpp  GrpcTransporter.hpp  LoggingTransporter.hpp
loggingLib/src/: CMakeLists.txt  Logger.cpp  Logger.h  LoggingServerConnector.cpp  LoggingServerConnector.hpp
loggingLib/tests/: CMakeLists.txt
